<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="app_name">Vivitar</string>
    <string name="action_settings">Settings</string>
    <string name="can_not_use_BLE">Can not use BLE in your phone, please use audio jack to sync.</string>
    <string name="title_activity_mainss">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="SUN">SUN</string>
    <string name="JAN">JAN</string>
    <string name="FEB">FEB</string>
    <string name="MAR">MAR</string>
    <string name="APR">APR</string>
    <string name="MAY">MAY</string>
    <string name="JUN">JUN</string>
    <string name="JUL">JUL</string>
    <string name="AUG">AUG</string>
    <string name="SEP">SEP</string>
    <string name="OCT">OCT</string>
    <string name="NOV">NOV</string>
    <string name="DEC">DEC</string>
    <string name="index_title_innofit">Vivitar</string>
    <string name="index_weight">Weight</string>
    <string name="user_details_p_00">My Profile</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_user_details_table">UserDetailsTableActivity</string>
    <string name="tv_danwei_kg">Kg</string>
    <string name="No_records">No records</string>
    <string name="p_00_tv1">P-00</string>
    <string name="_tv2">(</string>
    <string name="user1_info_dialog">user1</string>
    <string name="user_details_hint">user</string>
    <string name="_info_dialog">)</string>
    <string name="male_info_dialog">Male</string>
    <string name="_33s_info_dialog">33s</string>
    <string name="_175cm_info_dialog">175cm</string>
    <string name="project_info_dialog">Project</string>
    <string name="results_info_dialog">Results</string>
    <string name="unit_info_dialog">Unit</string>
    <string name="changes_user_details">changes</string>
    <string name="name_user_details">Name</string>
    <string name="sex_user_details">Gender</string>
    <string name="male_user_details">Male</string>
    <string name="female_user_details">Female</string>
    <string name="age_user_details">Age</string>
    <string name="_33_user_details">33</string>
    <string name="height_user_details">Height</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="_175_userdetaile">175</string>
    <string name="goal_weight_value">55</string>
    <string name="username_toast_tip">Please enter a user name</string>
    <string name="user_title">User</string>
    <string name="about_left">About</string>
    <string name="setting_left">Setting</string>
    <string name="user_left">User</string>
    <string name="home_left">Home</string>
    <string name="innofit_left_title">Vivitar</string>
    <string name="about_tv_top2_list1">Manufacturer:JoyElectronic(Zhuhai)Co,Ltd.</string>
    <string name="about_tv_top2_list2">Tel:+867567683628</string>
    <string name="about_tv_top2_list4">E-mail:joyelectronics@hotmail.com</string>
    <string name="about_tv_top3_list1">Developer:Omesoft（Zhuhai）Co,Ltd.</string>
    <string name="about_tv_top3_list2_left">WebSite:</string>
    <string name="about_tv_top3_list2_right">www.omesoft.com</string>
    <string name="about_tv_top3_list3">Tel:+867566882315</string>
    <string name="about_tv_top3_list4">E-mail:services@omesoft.com</string>
    <string name="about">About</string>
    <string name="today_">"Today "</string>
    <string name="yesterday_">"Yesterday "</string>
    <string name="exit_tip">Exit</string>
    <string name="whether_to_exit_">Press OK to close the app</string>
    <string name="exit_ok">OK</string>
    <string name="p_00">P-00</string>
    <string name="kuohao_left">(</string>
    <string name="male_main">Male</string>
    <string name="_175cm">175cm</string>
    <string name="zearo">00.0</string>
    <string name="bmi">BMI</string>
    <string name="kuohao_right">)</string>
    <string name="user1">user1</string>
    <string name="back">Back</string>
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="cm_kg">Kg</string>
    <string name="cm_kg_k">(Kg)</string>
    <string name="inch_lb">Lb</string>
    <string name="inch_lb_l">(Pounds)</string>
    
    <string name="cm">cm</string>
    <string name="cm_c">(cm)</string>
    <string name="in">in</string>
    <string name="in_i">(inches)</string>
    
    <string name="unit">Unit</string>
    <string name="save_success">Save success</string>
    <string name="add">Add</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="us">US</string>
    <string name="metric">Metric</string>
    <string name="kg">Kg</string>
    <string name="ft">ft</string>
    <string name="lb">Lb</string>
 <string name="tip_no_user_keepOne">At least one user</string>
</resources>