<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_all"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_top_bg" >

        <Button
            android:id="@+id/iv_button_back_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_back"
            android:contentDescription="@null"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_user_details_p_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_details_p_00"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/iv_button_save_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_save_blue"
            android:contentDescription="@null"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/layout_us_metric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/but_us"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_unit"
            android:gravity="center"
            android:button="@null"
            android:text="@string/us" />

        <RadioButton
            android:id="@+id/but_metric"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_unit"
            android:gravity="center"
            android:orientation="horizontal"
            android:button="@null"
            android:text="@string/metric" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.gzgamut.vivitar.view.MyCircleImageView
                android:id="@+id/image_head_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@null"
                android:src="@drawable/image_head_big" />

            <LinearLayout
                android:id="@+id/layout_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/background_fill_in_user_pic" >

                <ImageView
                    android:id="@+id/iv_image_carmer_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/image_carmer_ico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/changes_user_details"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_input" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/name_user_details" />

            <EditText
                android:id="@+id/et_username_profile"
                style="@style/et_profile"
                android:hint="@string/user_details_hint"
                android:maxLength="10" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_input" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/sex_user_details" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/but_meal_profile"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_unit"
                    android:gravity="center"
                    android:button="@null"
                    android:text="@string/male_user_details" />

                <RadioButton
                    android:id="@+id/but_female_profile"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_unit"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:button="@null"
                    android:text="@string/female_user_details" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_input" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/age_user_details" />

            <EditText
                android:id="@+id/et_age_profile"
                style="@style/et_profile"
                android:hint="@string/_33_user_details"
                android:inputType="number"
                android:maxLength="3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_input" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/height_user_details" />

            <EditText
                android:id="@+id/et_height_profile"
                style="@style/et_profile"
                android:layout_marginRight="20dp"
                android:hint="@string/_175_userdetaile"
                android:inputType="number"
                android:maxLength="5" />

            <TextView
                android:id="@+id/tv_unit_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:text="@string/cm" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_input" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/goal_weight" />

            <EditText
                android:id="@+id/et_goal_weight"
                style="@style/et_profile"
                android:layout_marginRight="20dp"
                android:hint="@string/goal_weight_value"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:id="@+id/tv_unit_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:text="@string/kg" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>